# c-cpp-things

./: CMakeLists.txt  readme.md
C/: CMakeLists.txt  HashIndex.c  asyncbyc.c  bigEnd.c  double.c  funcCall.c  hgd.c  hgd2.c  main.c  math.c  mutex.c  mutexMarco.c  nameMutex.c  reves.c  siezof.c  str_copy.c  threadPoolTest.c  threadpool.c
CMake/: cmakeUtil.cmake
CPP/: CMakeLists.txt  Person.cpp  ThreadPool.h  ThreadPooldemo.cpp  asyn.cpp  async2.cpp  async3.cpp  byte2hex.cpp  container.cpp  functionpointer.cpp  mutex2.cpp  nameMutex2.cpp  thread_detach.cpp
CPP/cppthings/: CmakeLists.txt  whatThis.cpp
CPP/cppthings/codingStyledioms/: readme.md
CPP/cppthings/codingStyledioms/classInitalizers/: classNest.cpp  initiliazer.cpp
cmaketest/: CMakeLists.txt  hellow.c
cmaketest/include/: hellow.h
loadLibrary/: CMakeLists.txt  library.c  loadLibrary.cpp
